[package]
name = "rusty_node"
version = "0.1.0"
authors = ["Mike Piccolo <mfpiccolo@gmail.com>"]
license = "MIT"

[lib]
name = "rusty_node"
crate-type = ["dylib"]

[dependencies]
neon = { git = "https://github.com/rustbridge/neon" }
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
